small change in html

--- a/weather/index.html
+++ b/weather/index.html
@@ -39,27 +39,27 @@
                 <div class="bottom-answer__container">
                     <div class="bottom-answer__box">
                         <p class="bottom-answer__p--top">Main:</p>
-                        <p class="bottom-answer__p--bottom data-main">?</p>
+                        <p class="bottom-answer__p--bottom data-main"></p>
                     </div>
                     <div class="bottom-answer__box">
                         <p class="bottom-answer__p--top">Temperature:</p>
-                        <p class="bottom-answer__p--bottom data-temp">?</p>
+                        <p class="bottom-answer__p--bottom data-temp"></p>
                     </div>
                     <div class="bottom-answer__box">
                         <p class="bottom-answer__p--top">Feels like:</p>
-                        <p class="bottom-answer__p--bottom data-feels">?</p>
+                        <p class="bottom-answer__p--bottom data-feels"></p>
                     </div>
                     <div class="bottom-answer__box">
                         <p class="bottom-answer__p--top">Pressure:</p>
-                        <p class="bottom-answer__p--bottom data-press">?</p>
+                        <p class="bottom-answer__p--bottom data-press"></p>
                     </div>
                     <div class="bottom-answer__box">
                         <p class="bottom-answer__p--top">Humidity:</p>
-                        <p class="bottom-answer__p--bottom data-hum">?</p>
+                        <p class="bottom-answer__p--bottom data-hum"></p>
                     </div>
                     <div class="bottom-answer__box">
                         <p class="bottom-answer__p--top">Wind speed:</p>
-                        <p class="bottom-answer__p--bottom data-wind">?</p>
+                        <p class="bottom-answer__p--bottom data-wind"></p>
                     </div>
                 </div>
 
